/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Enum.java to edit this template
 */
package dtos;

/**
 *
 * @author lagar
 */
public enum Valor {
    CERO,UNO,DOS,TRES,CUATRO,CINCO,SEIS,SIETE,OCHO,NUEVE,PROHIBIDO,REVERSA,MASDOS,MASCUATRO,CAMBIOCOLOR
}
